[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-course-dsr"
version = "0.1.0"
description = "Introduction to (Deep) Reinforcement Learning course materials"
authors = [
    {name = "RL Course Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium==0.28.1",
    "keras~=2.15.0",
    "matplotlib==3.6.3",
    "numpy==1.26.4",
    "pandas~=2.2.2",
    "pre-commit>=4.3.0",
    "pygame==2.5.2",
    "pyglet==2.0.14",
    "pylint==3.1.0",
    "ray[default]==2.9.3",
    "ray[rllib]==2.9.3",
    "setuptools~=69.5.1",
    "tensorflow==2.15.0",
    "tqdm==4.65.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rlcomponents*", "uneven_maze*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.py"]

# Development tools configuration
[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pylint.format]
max-line-length = 88
