[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-course-dsr"
version = "0.1.0"
description = "Introduction to (Deep) Reinforcement Learning course materials"
authors = [
    {name = "RL Course Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control]>=1.0.0",
    "ray[default,rllib]>=2.48.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rlcomponents*", "uneven_maze*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.py"]

# Development tools configuration
[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pylint.format]
max-line-length = 88
